Adding some todos to the jupyter notebook.

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TODOs\n",
+    "- Investigate better difference measures.\n",
+    "- Parallelize the distance computation (to allow for efficient computation of the dendogramms)\n",
+    "- Implement matching\n",
+    "- Derive some trend metrics (e.g., change of attachment/adjacent nodes, relative growth, absolute growth-we need market capitalization for this.) for every cluster.\n",
+    "- Determine strongly growing clusters\n",
+    "- Generate test sets. I.e., invest on strongly growing clusters and check how performance would have been."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Import Libraries"
    ]
   },
