Adding some comments.

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -665,32 +665,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6165, 1070, 244, 7153, 2640, 2349, 2142, 1337, 7109, 981]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO typically the different trees have different number of symbols, we only have to do this for the overlap of initial symbols here\n",
+    "# TODO we also should handle conflicts somehow, that is if two right hand clusters match on the same left hand cluster\n",
+    "def cluster_similarity(set_left, set_right):\n",
+    "    \"\"\"Jaccard similarity\"\"\"\n",
+    "    overlap = float(len(set(set_left).intersection(set(set_right))))/float(len(set(set_right).union(set(set_left)))) # relative overlap\n",
+    "    return overlap\n",
+    "\n",
     "def compute_matching(symbol_cluster_left, symbol_cluster_right):\n",
     "    \"\"\"Compute a matching of sets.\n",
     "    \n",
-    "    We match every set on the right with a set with the biggest overlap in symbol count.\n",
+    "    We match every set on the right with a set with the biggest relative overlap in symbol count.\n",
     "\n",
     "    Args:\n",
     "        symbol_cluster_left (list[list]): Clusters left hand side.\n",
     "        symbol_cluster_right (list[list]): Clusters right hand side.\n",
     "    \"\"\"\n",
-    "    "
+    "    matching = {}\n",
+    "    similarities = {}\n",
+    "    for idx_right, cluster_right in enumerate(symbol_cluster_right):\n",
+    "        best_match = None\n",
+    "        best_sim = 0\n",
+    "        for idx_left, cluster_left in enumerate(symbol_cluster_left):\n",
+    "            sim = cluster_similarity(cluster_left, cluster_right)\n",
+    "            #print(f\"Cluster left: {cluster_left}; Cluster right: {cluster_right}: sim: {sim}\")\n",
+    "            if sim > best_sim:\n",
+    "                best_sim = sim\n",
+    "                best_match = idx_left\n",
+    "        matching[idx_right] = best_match\n",
+    "        similarities[idx_right] = best_sim\n",
+    "    return matching, similarities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6165], [1070], [244], [7153], [2640], [2349], [2142], [1337], [7109], [981], [7153, 1337], [2142, 7153, 1337], [1070, 2640], [2349, 1070, 2640], [6165, 2349, 1070, 2640], [7109, 6165, 2349, 1070, 2640], [2142, 7153, 1337, 7109, 6165, 2349, 1070, 2640], [981, 2142, 7153, 1337, 7109, 6165, 2349, 1070, 2640], [244, 981, 2142, 7153, 1337, 7109, 6165, 2349, 1070, 2640]]\n",
+      "[[6165], [1070], [244], [7153], [2640], [2349], [2142], [1337], [7109], [981], [2142, 1337], [7153, 2142, 1337], [1070, 2640], [2349, 1070, 2640], [7153, 2142, 1337, 2349, 1070, 2640], [7109, 981], [7153, 2142, 1337, 2349, 1070, 2640, 7109, 981], [6165, 244], [7153, 2142, 1337, 2349, 1070, 2640, 7109, 981, 6165, 244]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_left = symbols_from_linkage(selected_symbols_idx, Z_old)\n",
+    "cluster_right = symbols_from_linkage(selected_symbols_idx, Z_new)\n",
+    "print(cluster_left)\n",
+    "print(cluster_right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({0: 0,\n",
+       "  1: 1,\n",
+       "  2: 2,\n",
+       "  3: 3,\n",
+       "  4: 4,\n",
+       "  5: 5,\n",
+       "  6: 6,\n",
+       "  7: 7,\n",
+       "  8: 8,\n",
+       "  9: 9,\n",
+       "  10: 11,\n",
+       "  11: 11,\n",
+       "  12: 12,\n",
+       "  13: 13,\n",
+       "  14: 16,\n",
+       "  15: 8,\n",
+       "  16: 17,\n",
+       "  17: 0,\n",
+       "  18: 18},\n",
+       " {0: 1.0,\n",
+       "  1: 1.0,\n",
+       "  2: 1.0,\n",
+       "  3: 1.0,\n",
+       "  4: 1.0,\n",
+       "  5: 1.0,\n",
+       "  6: 1.0,\n",
+       "  7: 1.0,\n",
+       "  8: 1.0,\n",
+       "  9: 1.0,\n",
+       "  10: 0.6666666666666666,\n",
+       "  11: 1.0,\n",
+       "  12: 1.0,\n",
+       "  13: 1.0,\n",
+       "  14: 0.75,\n",
+       "  15: 0.5,\n",
+       "  16: 0.8888888888888888,\n",
+       "  17: 0.5,\n",
+       "  18: 1.0})"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cluster_left = symbols_from_linkage(selected_symbols_idx, Z_old)\n",
+    "cluster_right = symbols_from_linkage(selected_symbols_idx, Z_new)\n",
+    "compute_matching(cluster_left, cluster_right)"
    ]
   }
  ],
